# under-the-surface

./: .copier-answers.yml  .gitignore  .uEdition.answers  Pipfile  README.md  _copier_conf.answers-file  action-requirements.txt  babel.cfg  build.py  build.sh  cgi-build.sh  dev-server.py  error.txt  filters.py  gulpfile.js  i18n_install.py  jsonapi_reader.py  multi_language_jsonapi_reader.py  package.json  pelicanconf.py  person_generator.py  person_reader.py  publishconf.py  publishconf_de.py  publishconf_en.py  pyproject.toml  readable_tei_plugin.py  references.bib  runner.py  toc.yml  uEdition.yml
.github/: dependabot.yml
.github/workflows/: pages.yml
content/articles/: under-the-surface-de.rst  under-the-surface.rst
content/pages/: browse.rst
content/people/: database.sqlite
content/people/0/0/0/: 0001.de.json  0001.en.json  0002.de.json  0002.en.json  0003.de.json  0003.en.json  0004.de.json  0004.en.json  0005.de.json  0005.en.json
content/people/00/: 0001.de.overlay  0001.en.overlay  0001.json  0002.de.overlay  0002.en.overlay  0002.json  0003.de.overlay  0003.en.overlay  0003.json  0004.de.overlay  0004.en.overlay  0004.json
de/: .uEdition.answers  _config.yml  _toc.yml  bibliography.md  index.md
de/appendices/: bibliography.md  index.md
de/authors/: index.md  zäunemann-sidonia-hedwig.md
docs/: index.html
en/: .uEdition.answers  _config.yml  _toc.yml  index.md
en/appendices/: index.md
en/authors/: index.md  zäunemann-sidonia-hedwig.md
i18n/: compile-translations.sh  under-the-surface.pot  update-translations.sh
i18n/de/LC_MESSAGES/: under-the-surface.mo  under-the-surface.po
i18n/en/LC_MESSAGES/: under-the-surface.mo  under-the-surface.po
js/: app.js
scripts/: dta_link.py  editor.py  loader.py  models.py  textgrid_link.py  util.py  uts.py  viaf_link.py  wikidata_link.py
site/: index.html
static/: style.css
styles/: _aria-menu.scss  _foundation-overrides.scss  _generic.scss  _icons.scss  _metadata.scss  _person.scss  _reader.scss  _settings.scss  _topbar.scss  theme.scss
theme/static/css/: theme.css
theme/static/js/: app.js
theme/templates/: article.html  author.html  base.html  browse.html  category.html  index.html  macros.html  person.html
