[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Under-the-Surface"
description = ''
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "uedition>=0.3.1",
]
version = "1.0.0"

[project.urls]
Documentation = "https://github.com/unknown/-#readme"
Issues = "https://github.com/unknown/-/issues"
Source = "https://github.com/unknown/-"

[tool.hatch.envs.default.scripts]
build = "uEdition build"
