[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "under-the-surface"
description = 'The Under the Surface μEdition'
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
  { name = "Mark Hall", email = "mark.hall@work.room3b.eu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "uedition>=0.4.0",
]
version = "1.0.0"

[project.urls]
Documentation = "https://github.com/scmmmh/under-the-surface/-#readme"
Issues = "https://github.com/scmmmh/under-the-surface/-/issues"
Source = "https://github.com/scmmmh/under-the-surface/-"

[tool.hatch.envs.default.scripts]
build = "uEdition build"
