[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "under-the-surface"
description = 'The Under the Surface μEdition'
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [{ name = "Mark Hall", email = "mark.hall@work.room3b.eu" }]
classifiers = []
dependencies = []
version = "1.0.0"

[project.urls]
Documentation = "https://github.com/scmmmh/under-the-surface/-#readme"
Issues = "https://github.com/scmmmh/under-the-surface/-/issues"
Source = "https://github.com/scmmmh/under-the-surface/-"

[tool.hatch.envs.default]
dependencies = ["uedition>=0.9.0"]
skip-install = true

[tool.hatch.envs.default.scripts]
build = "uEdition build {args}"
serve = "uEdition serve {args}"
update = "uEdition update {args}"
